--- a/style.css
+++ b/style.css
@@ -1,8 +1,26 @@
-header *{
-    font-family: 'Courier New', Courier, monospace;
-    display: flex;
-    justify-content: center;
+body, html{
+    height: 100%;
+}
 
+.bg {
+    background-image: url("https://images.pexels.com/photos/34079448/pexels-photo-34079448.jpeg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#header {
+    font-family: 'Courier New', Courier, monospace;
+    display: block;
+    justify-content: center;
+    background-color: rgb(252, 252, 252);
+    
+
+}
+
+.alltasks {
+    display: inline-block;
+    justify-content: center;
 }
 
 #title{
@@ -13,13 +31,30 @@ header *{
 
 #todotasks{
     color:rgb(26, 5, 211);
+    display: flex;
+    justify-content: center;
 
 }
 
-#task{
+#maincont *{
+    display: flex;
+    
+    
+}
+
+#tasks li{
     width: 300px;
     height: 20px;
     border: 2px groove rgb(252, 177, 27);
+    border-radius: 5px;
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+li > .trashicon{
+    margin-left: 2px;
 }
 
 #ctasks{
@@ -30,7 +65,8 @@ header *{
 .trashicon {
   color: #e53e3e;         
   font-size: 18px;        
-  cursor: pointer;        
+  cursor: pointer;
+         
  
 }
 
