further css experimentations

--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ body, html{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: aqua;
+    background-color: bisque;
 }
 
 li > .trashicon{
